update: Bayes CV

--- a/Traditional_ML/RF_Classifier.ipynb
+++ b/Traditional_ML/RF_Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,10 +12,22 @@
     "from sklearn.exceptions import NotFittedError\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score, f1_score, accuracy_score\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, precision_score, f1_score, accuracy_score,recall_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "import xgboost as xgb\n",
+    "from skopt import BayesSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    mean_squared_error,\n",
+    "    mean_absolute_error,\n",
+    "    r2_score,\n",
+    "    f1_score\n",
+    ")\n",
     "\n",
     "train = pd.read_csv(\n",
     "    \"../Dataset/Preparation_dir/final_data/feature_engineering_data/version2/train.csv\"\n",
@@ -29,40 +41,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 50 candidates, totalling 150 fits\n",
-      "Best parameters found:  {'n_estimators': 500, 'min_samples_split': 5, 'min_samples_leaf': 4, 'max_features': 'log2', 'max_depth': 70}\n",
-      "Accuracy: 0.34952941176470587\n",
-      "Mean Squared Error (MSE): 4.741882352941176\n",
-      "Root Mean Squared Error (RMSE): 2.177586359468018\n",
-      "Mean Absolute Error (MAE): 1.7091764705882353\n",
-      "R^2: -1.8018296073851632\n",
-      "F1 Score: 0.17484638508848643\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "selected_features_list = [\n",
-    "    \"BandAccX\", \"BandAccY\", \"BandAccZ\", \"speed\", \"rate\", \"rateZone\", \"usage\", \"deviceStatus\",\n",
-    "    \"Acceleration_X\", \"Acceleration_Y\", \"Acceleration_Z\", \"MagneticField_X\", \"MagneticField_Y\",\n",
-    "    \"MagneticField_Z\", \"Orientation_X\", \"Orientation_Y\", \"Orientation_Z\", \"AngularVelocity_X\",\n",
-    "    \"AngularVelocity_Y\", \"AngularVelocity_Z\", \"altitude_diff\", \"latitude_diff\", \"longitude_diff\"\n",
+    "    \"BandAccX\",\n",
+    "    \"BandAccY\",\n",
+    "    \"BandAccZ\",\n",
+    "    \"speed\",\n",
+    "    \"rate\",\n",
+    "    \"rateZone\",\n",
+    "    \"usage\",\n",
+    "    \"deviceStatus\",\n",
+    "    \"Acceleration_X\",\n",
+    "    \"Acceleration_Y\",\n",
+    "    \"Acceleration_Z\",\n",
+    "    \"MagneticField_X\",\n",
+    "    \"MagneticField_Y\",\n",
+    "    \"MagneticField_Z\",\n",
+    "    \"Orientation_X\",\n",
+    "    \"Orientation_Y\",\n",
+    "    \"Orientation_Z\",\n",
+    "    \"AngularVelocity_X\",\n",
+    "    \"AngularVelocity_Y\",\n",
+    "    \"AngularVelocity_Z\",\n",
+    "    \"act\"\n",
     "]\n",
     "\n",
     "# 只选择selected_features_list中的特征\n",
     "X_train = train[selected_features_list]\n",
-    "X_test = test[selected_features_list]\n",
-    "\n",
+    "X_test = test[selected_features_list]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BandAccX', 'BandAccY', 'BandAccZ', 'speed', 'rate', 'rateZone',\n",
+       "       'usage', 'deviceStatus', 'Acceleration_X', 'Acceleration_Y',\n",
+       "       'Acceleration_Z', 'MagneticField_X', 'MagneticField_Y',\n",
+       "       'MagneticField_Z', 'Orientation_X', 'Orientation_Y', 'Orientation_Z',\n",
+       "       'AngularVelocity_X', 'AngularVelocity_Y', 'AngularVelocity_Z', 'act'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
+      "Best parameters found:  OrderedDict([('max_depth', 18), ('max_features', 'sqrt'), ('min_samples_leaf', 2), ('min_samples_split', 5), ('n_estimators', 167)])\n",
+      "Accuracy: 0.22105882352941175\n",
+      "Precision: 0.27653008944956736\n",
+      "Recall: 0.3175017507002801\n",
+      "Mean Squared Error (MSE): 1.4505882352941177\n",
+      "Root Mean Squared Error (RMSE): 1.2044036845236392\n",
+      "Mean Absolute Error (MAE): 0.9929411764705882\n",
+      "F1 Score: 0.1803075678361754\n"
+     ]
+    }
+   ],
+   "source": [
     "# 获取数据集中所有常数列的列表\n",
     "constant_columns = [col for col in X_train.columns if X_train[col].nunique() <= 1]\n",
     "\n",
@@ -71,12 +149,13 @@
     "X_test = X_test.drop(columns=constant_columns)\n",
     "\n",
     "# 创建训练集的特征和目标变量\n",
-    "X_train = train.drop(target, axis=1)\n",
-    "y_train = train[target]\n",
+    "target = 'act'  # 需要替换为你的目标列名\n",
+    "y_train = X_train[target]\n",
+    "X_train = X_train.drop(target, axis=1)\n",
     "\n",
     "# 创建测试集的特征和目标变量\n",
-    "X_test = test.drop(target, axis=1)\n",
-    "y_test = test[target]\n",
+    "y_test = X_test[target]\n",
+    "X_test = X_test.drop(target, axis=1)\n",
     "\n",
     "# 数据标准化\n",
     "scaler = StandardScaler()\n",
@@ -93,113 +172,79 @@
     "\n",
     "# 确保特征名称一致\n",
     "selected_features = selector.get_support(indices=True)\n",
-    "X_train_selected = pd.DataFrame(X_train_selected, columns=X_train.columns[selected_features])\n",
-    "X_test_selected = pd.DataFrame(X_test_selected, columns=X_train.columns[selected_features])\n",
+    "X_train_selected = pd.DataFrame(\n",
+    "    X_train_selected, columns=X_train.columns[selected_features]\n",
+    ")\n",
+    "X_test_selected = pd.DataFrame(\n",
+    "    X_test_selected, columns=X_train.columns[selected_features]\n",
+    ")\n",
     "\n",
-    "# 定义参数网格\n",
-    "param_grid = {\n",
-    "    'n_estimators': [200, 300, 500],  # 树的数量\n",
-    "    'max_features': ['sqrt', 'log2'],  # 考虑的最大特征数\n",
-    "    'max_depth': [30, 50, 70],  # 最大树深度\n",
-    "    'min_samples_split': [2, 5, 10],  # 分割内部节点所需的最小样本数\n",
-    "    'min_samples_leaf': [1, 2, 4]  # 叶节点所需的最小样本数\n",
+    "# 定义贝叶斯优化的参数空间\n",
+    "param_space = {\n",
+    "    \"n_estimators\": (100, 200),  # 进一步缩小范围\n",
+    "    \"max_features\": [\"sqrt\"],  # 进一步简化选项\n",
+    "    \"max_depth\": (10, 30),  # 进一步缩小范围\n",
+    "    \"min_samples_split\": (2, 5),  # 进一步缩小范围\n",
+    "    \"min_samples_leaf\": (1, 3),  # 进一步缩小范围\n",
     "}\n",
     "\n",
-    "# 创建 RandomizedSearchCV 对象\n",
-    "random_search = RandomizedSearchCV(estimator=rf_model, param_distributions=param_grid, n_iter=50, cv=3, n_jobs=8, scoring='r2', verbose=1, random_state=42)\n",
+    "# 创建 BayesSearchCV 对象\n",
+    "bayes_search = BayesSearchCV(\n",
+    "    estimator=rf_model,\n",
+    "    search_spaces=param_space,\n",
+    "    n_iter=50,  # 保持迭代次数\n",
+    "    cv=5,\n",
+    "    n_jobs=8,\n",
+    "    scoring=\"r2\",\n",
+    "    verbose=1,\n",
+    "    n_points=3,  # 每次评估多个参数组合\n",
+    "    random_state=0,  # 确保结果可重复\n",
+    ")\n",
     "\n",
-    "# 拟合随机搜索\n",
-    "random_search.fit(X_train_selected, y_train)\n",
-    "print(\"Best parameters found: \", random_search.best_params_)\n",
-    "best_rf = random_search.best_estimator_\n",
+    "# 拟合贝叶斯优化\n",
+    "bayes_search.fit(X_train_selected, y_train)\n",
+    "print(\"Best parameters found: \", bayes_search.best_params_)\n",
+    "best_rf = bayes_search.best_estimator_\n",
     "\n",
     "# 预测\n",
     "y_pred = best_rf.predict(X_test_selected)\n",
     "\n",
     "# 计算评估指标\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f'Accuracy: {accuracy}')\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "\n",
+    "precision=precision_score(y_test, y_pred, average=\"macro\")\n",
+    "print(f\"Precision: {precision}\")\n",
+    "\n",
+    "recall=recall_score(y_test, y_pred, average=\"macro\")\n",
+    "print(f\"Recall: {recall}\")\n",
     "\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f'Mean Squared Error (MSE): {mse}')\n",
+    "print(f\"Mean Squared Error (MSE): {mse}\")\n",
     "\n",
     "rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
-    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse}\")\n",
     "\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
-    "print(f'Mean Absolute Error (MAE): {mae}')\n",
+    "print(f\"Mean Absolute Error (MAE): {mae}\")\n",
     "\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "print(f'R^2: {r2}')\n",
-    "\n",
-    "f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "print(f'F1 Score: {f1}')"
+    "f1 = f1_score(y_test, y_pred, average=\"macro\")\n",
+    "print(f\"F1 Score: {f1}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1, Accuracy: 0.5294117647058824, R2: 0.042445223000778465, F1: 0.4174440058132944\n",
-      "Epoch: 2, Accuracy: 0.2777647058823529, R2: -2.1834612390167947, F1: 0.12173464690175856\n",
-      "Epoch: 3, Accuracy: 0.3496470588235294, R2: -1.6385413190968747, F1: 0.30343755249205223\n",
-      "Epoch: 4, Accuracy: 0.2777647058823529, R2: -2.1834612390167947, F1: 0.12173464690175856\n",
-      "Epoch: 5, Accuracy: 0.1652941176470588, R2: -2.0742548103659217, F1: 0.17882522644831464\n",
-      "Early stopping\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import accuracy_score, r2_score, f1_score\n",
-    "from joblib import dump, load\n",
-    "\n",
-    "best_model = None\n",
-    "n_epochs = 10\n",
-    "rf_model = RandomForestClassifier(n_estimators=1)\n",
-    "\n",
-    "X_train_selected_values = X_train_selected.values\n",
-    "y_train_values = y_train.values\n",
-    "\n",
-    "best_score = 0\n",
-    "epochs_without_improvement = 0\n",
-    "\n",
-    "for epoch in range(n_epochs):\n",
-    "    rf_model.set_params(n_estimators=rf_model.get_params()['n_estimators'] + 1)\n",
-    "    rf_model.fit(X_train_selected_values, y_train_values)\n",
-    "    y_train_values= rf_model.predict(X_train_selected_values)\n",
-    "\n",
-    "    # 预测\n",
-    "    y_pred = rf_model.predict(X_test_selected.values)\n",
-    "\n",
-    "    # 计算评估指标\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "    f1 = f1_score(y_test, y_pred, average='weighted')  # 使用加权平均 F1 分数\n",
-    "\n",
-    "    print(f'Epoch: {epoch+1}, Accuracy: {accuracy}, R2: {r2}, F1: {f1}')\n",
-    "\n",
-    "    # 如果当前模型的 F1 分数更高，保存当前模型\n",
-    "    if accuracy > best_score:\n",
-    "        best_score = f1\n",
-    "        best_model = rf_model\n",
-    "        # 保存模型\n",
-    "        dump(best_model, 'best_model.pkl')\n",
-    "\n",
-    "    # 早停\n",
-    "    if f1 > best_score:\n",
-    "        best_score = f1\n",
-    "        epochs_without_improvement = 0\n",
-    "    else:\n",
-    "        epochs_without_improvement += 1\n",
-    "        if epochs_without_improvement >= 5:  # 如果连续 5 个 epoch 没有改善，就停止训练\n",
-    "            print('Early stopping')\n",
-    "            break"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
