--- a/Traditional_ML/cudf_test.ipynb
+++ b/Traditional_ML/cudf_test.ipynb
@@ -4,40 +4,41 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StratifiedKFold, GridSearchCV\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      6\u001b[0m     accuracy_score,\n\u001b[1;32m      7\u001b[0m     mean_squared_error,\n\u001b[1;32m      8\u001b[0m     mean_absolute_error,\n\u001b[1;32m      9\u001b[0m     f1_score\n\u001b[1;32m     10\u001b[0m )\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mxgboost\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XGBClassifier\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimblearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcombine\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SMOTETomek\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimblearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, precision_score, f1_score, accuracy_score,recall_score\n",
+    "import cudf as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import (\n",
+    "    mean_squared_error,\n",
+    "    mean_absolute_error,\n",
+    "    precision_score,\n",
+    "    f1_score,\n",
+    "    accuracy_score,\n",
+    "    recall_score,\n",
+    ")\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import StratifiedKFold, GridSearchCV\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score,\n",
     "    mean_squared_error,\n",
     "    mean_absolute_error,\n",
-    "    f1_score\n",
+    "    f1_score,\n",
     ")\n",
     "from xgboost import XGBClassifier\n",
-    "from imblearn.combine import SMOTETomek\n",
-    "from imblearn.pipeline import Pipeline\n",
     "\n",
     "train = pd.read_csv(\n",
-    "    \"../Dataset/Preparation_dir/final_data/feature_engineering_data/version2/train.csv\"\n",
+    "    \"../QS4ML-VU-100/Dataset/Preparation_dir/final_data/feature_engineering_data/version2/train.csv\"\n",
     ")\n",
     "test = pd.read_csv(\n",
-    "    \"../Dataset/Preparation_dir/final_data/feature_engineering_data/version2/test.csv\"\n",
+    "    \"../QS4ML-VU-100//Dataset/Preparation_dir/final_data/feature_engineering_data/version2/test.csv\"\n",
     ")\n",
     "\n",
     "target = \"act\""
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,55 +160,47 @@
     "    \"BandAccZ_rolling_mean\",\n",
     "    \"speed_rolling_mean\",\n",
     "    \"rate_rolling_mean\",\n",
+    "    \"act\"\n",
     "]\n",
     "\n",
     "# 只选择selected_features_list中的特征\n",
     "X_train = train[selected_features_list]\n",
-    "X_test = test[selected_features_list]"
+    "X_test = test[selected_features_list]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['BandAccX', 'BandAccY', 'BandAccZ', 'speed', 'rate', 'BandAccX_diff',\n",
-       "       'BandAccY_diff', 'BandAccZ_diff', 'speed_diff', 'rate_diff',\n",
-       "       ...\n",
-       "       'Orientation_Y_rolling_mean', 'Orientation_Z_rolling_mean',\n",
-       "       'AngularVelocity_X_rolling_mean', 'AngularVelocity_Y_rolling_mean',\n",
-       "       'AngularVelocity_Z_rolling_mean', 'BandAccX_rolling_mean',\n",
-       "       'BandAccY_rolling_mean', 'BandAccZ_rolling_mean', 'speed_rolling_mean',\n",
-       "       'rate_rolling_mean'],\n",
-       "      dtype='object', length=106)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/taoyida/miniconda3/envs/rapids-24.06/lib/python3.11/site-packages/cuml/internals/api_decorators.py:188: UserWarning: To use pickling first train using float32 data to fit the estimator\n",
+      "  ret = func(*args, **kwargs)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n"
+      "Best parameters: {'n_estimators': 10, 'max_depth': 15, 'max_features': 'sqrt'}\n",
+      "Best accuracy score: 0.42635294795036316\n",
+      "F1 score of the best model: 0.49484997760859833\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "from cuml.model_selection import train_test_split\n",
+    "from cuml.preprocessing import StandardScaler\n",
+    "from cuml.ensemble import RandomForestClassifier\n",
+    "from cuml.metrics import accuracy_score\n",
+    "from cuml.metrics import confusion_matrix\n",
+    "import itertools\n",
+    "\n",
+    "\n",
     "# 获取数据集中所有常数列的列表\n",
     "constant_columns = [col for col in X_train.columns if X_train[col].nunique() <= 1]\n",
     "\n",
@@ -226,100 +219,75 @@
     "\n",
     "# 数据标准化\n",
     "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# 处理数据不平衡问题\n",
-    "smote_tomek = SMOTETomek(random_state=42)\n",
     "\n",
-    "# 使用XGBoost分类器\n",
-    "xgb_model = XGBClassifier()\n",
-    "\n",
-    "# 创建流水线\n",
-    "pipeline = Pipeline(\n",
-    "    [\n",
-    "        (\"scaler\", scaler),\n",
-    "        (\"smote_tomek\", smote_tomek),\n",
-    "        (\n",
-    "            \"feature_selection\",\n",
-    "            RFE(estimator=xgb_model, n_features_to_select=10, step=1),\n",
-    "        ),\n",
-    "        (\"classification\", xgb_model),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# 定义超参数网格\n",
+    "# 定义要搜索的超参数网格\n",
     "param_grid = {\n",
-    "    \"classification__n_estimators\": [10, 50, 100],\n",
-    "    \"classification__max_depth\": [10, 20, 30],\n",
-    "    \"classification__learning_rate\": [0.01, 0.1, 0.2],\n",
-    "    \"classification__subsample\": [0.6, 0.8, 1.0],\n",
-    "    \"classification__colsample_bytree\": [0.6, 0.8, 1.0],\n",
+    "    \"n_estimators\": [5, 10, 20, 50, 100, 200],\n",
+    "    \"max_depth\": [5, 10, 15, 20],\n",
+    "    \"max_features\": [\"sqrt\", \"log2\"],\n",
     "}\n",
     "\n",
-    "# 交叉验证\n",
-    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "# 初始化最佳参数和最高得分\n",
+    "best_params = None\n",
+    "best_score = -np.inf\n",
     "\n",
-    "# 使用GridSearchCV进行超参数调优\n",
-    "grid_search = GridSearchCV(\n",
-    "    pipeline, param_grid, cv=cv, scoring=\"f1_macro\", n_jobs=8, verbose=1\n",
-    ")\n",
-    "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "print(\"Best parameters found: \", grid_search.best_params_)\n",
-    "best_model = grid_search.best_estimator_\n",
+    "def f1_score(y_true, y_pred):\n",
+    "    # 计算混淆矩阵\n",
+    "    cm = confusion_matrix(y_true, y_pred)\n",
     "\n",
-    "# 预测\n",
+    "    # 计算精确度和召回率\n",
+    "    precision = cm[1, 1] / (cm[1, 1] + cm[0, 1])\n",
+    "    recall = cm[1, 1] / (cm[1, 1] + cm[1, 0])\n",
+    "\n",
+    "    # 计算 F1 分数\n",
+    "    f1 = 2 * (precision * recall) / (precision + recall)\n",
+    "\n",
+    "    return f1\n",
+    "\n",
+    "\n",
+    "# 对每一组参数进行网格搜索\n",
+    "for params in itertools.product(\n",
+    "    param_grid[\"n_estimators\"], param_grid[\"max_depth\"], param_grid[\"max_features\"]\n",
+    "):\n",
+    "    # 创建并训练模型\n",
+    "    model = RandomForestClassifier(\n",
+    "        n_estimators=params[0],\n",
+    "        max_depth=params[1],\n",
+    "        max_features=params[2]\n",
+    "    )\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # 在验证集上评估模型\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    score = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    # 如果这个得分比我们之前找到的得分更好，那么就更新最佳参数和最高得分\n",
+    "    if score > best_score:\n",
+    "        best_score = score\n",
+    "        best_params = {\n",
+    "            \"n_estimators\": params[0],\n",
+    "            \"max_depth\": params[1],\n",
+    "            \"max_features\": params[2],\n",
+    "        }\n",
+    "        best_model = model\n",
+    "\n",
+    "# 使用最佳模型计算 F1 分数\n",
     "y_pred = best_model.predict(X_test)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
     "\n",
-    "# 计算评估指标\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Accuracy: {accuracy}\")\n",
-    "\n",
-    "precision = precision_score(y_test, y_pred, average=\"macro\")\n",
-    "print(f\"Precision: {precision}\")\n",
-    "\n",
-    "recall = recall_score(y_test, y_pred, average=\"macro\")\n",
-    "print(f\"Recall: {recall}\")\n",
-    "\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f\"Mean Squared Error (MSE): {mse}\")\n",
-    "\n",
-    "rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
-    "print(f\"Root Mean Squared Error (RMSE): {rmse}\")\n",
-    "\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "print(f\"Mean Absolute Error (MAE): {mae}\")\n",
-    "\n",
-    "f1 = f1_score(y_test, y_pred, average=\"macro\")\n",
-    "print(f\"F1 Score: {f1}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "RFE,XGB,无差分窗口特征：\n",
-    "Fitting 5 folds for each of 162 candidates, totalling 810 fits\n",
-    "Best parameters found:  {'classification__colsample_bytree': 0.6, 'classification__learning_rate': 0.1, 'classification__max_depth': 20, 'classification__n_estimators': 200, 'classification__subsample': 1.0}\n",
-    "Accuracy: 0.24482352941176472\n",
-    "Precision: 0.27041683190551047\n",
-    "Recall: 0.3367577030812325\n",
-    "Mean Squared Error (MSE): 1.4625882352941177\n",
-    "Root Mean Squared Error (RMSE): 1.2093751424988517\n",
-    "Mean Absolute Error (MAE): 0.9682352941176471\n",
-    "F1 Score: 0.20595475913726044"
+    "print(\"Best parameters:\", best_params)\n",
+    "print(\"Best accuracy score:\", best_score)\n",
+    "print(\"F1 score of the best model:\", f1)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML4QS",
+   "display_name": "rapids-24.06",
    "language": "python",
    "name": "python3"
   },
