--- a/Deep_learning/Residual_Net.ipynb
+++ b/Deep_learning/Residual_Net.ipynb
@@ -8259,7 +8259,7 @@
     "plt.title('Confusion Matrix')\n",
     "ax.invert_yaxis()  # Invert y axis\n",
     "plt.show()\n",
-    "plt.savefig(\"Confusion_Matrix.png\")"
+    "plt.savefig(\"Confusion-Matrix.png\")"
    ]
   }
  ],
