--- a/Deep_learning/Residual_Net.ipynb
+++ b/Deep_learning/Residual_Net.ipynb
@@ -8033,7 +8033,7 @@
     "\n",
     "fig.tight_layout()  \n",
     "plt.show()\n",
-    "plt.savefig(\"Loss-Accuracy-Epoch.png\")"
+    "plt.savefig(\"Plot/Loss-Accuracy-Epoch.png\")"
    ]
   },
   {
@@ -8259,7 +8259,7 @@
     "plt.title('Confusion Matrix')\n",
     "ax.invert_yaxis()  # Invert y axis\n",
     "plt.show()\n",
-    "plt.savefig(\"Confusion-Matrix.png\")"
+    "plt.savefig(\"Plot/Confusion-Matrix.png\")"
    ]
   }
  ],
